// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`schemaBuilder customButtonGroup when Fluid Type is changed to Gas, then update Fluid Type label. 1`] = `
[
  {
    "componentProps": {
      "schema": [
        {
          "fields": [
            {
              "column": 12,
              "data": [
                {
                  "id": "1",
                  "label": "Liquid",
                },
                {
                  "id": "2",
                  "label": "Gas",
                },
              ],
              "defaultId": "2",
              "label": "Fluid Type - UPDATE",
              "name": "fluid-type",
              "type": "CUSTOM_BUTTON_GROUP",
              "value": "2",
            },
          ],
        },
      ],
    },
  },
]
`;

exports[`schemaBuilder singleSelect when Flow Rate is changed to Gallons(US)/sec, then update Flow Rate label 1`] = `
[
  {
    "componentProps": {
      "schema": [
        {
          "fields": [
            {
              "defaultIds": "USGPS",
              "label": "Flow Rate - UPDATE",
              "name": "flow-rate",
              "options": [
                {
                  "id": 1,
                  "label": "ft3/day (ACFD)",
                  "value": "ACFD",
                },
                {
                  "id": 2,
                  "label": "Gallons(US)/sec",
                  "value": "USGPS",
                },
              ],
              "type": "SINGLE_SELECT",
              "value": "USGPS",
            },
          ],
        },
      ],
    },
  },
]
`;

exports[`schemaBuilder tableInput when Density is changed to Specific Gravity, then blank Density Min cell and change Density Max cell to text 1`] = `
[
  {
    "componentProps": {
      "schema": [
        {
          "fields": [
            {
              "column": 12,
              "data": [
                [
                  {
                    "align": "center",
                    "label": "",
                    "name": "r1height",
                    "type": "TEXT",
                  },
                  {
                    "align": "center",
                    "label": "Min",
                    "type": "TEXT",
                  },
                  {
                    "align": "center",
                    "label": "Normal",
                    "type": "TEXT",
                  },
                  {
                    "align": "center",
                    "label": "Max",
                    "type": "TEXT",
                  },
                  {
                    "align": "center",
                    "label": "Units",
                    "type": "TEXT",
                  },
                ],
                [
                  {
                    "disabled": true,
                    "name": "density",
                    "options": [
                      {
                        "label": "Density",
                        "selected": true,
                        "value": "DENSITY",
                      },
                      {
                        "label": "Specific Gravity",
                        "value": "SPECIFIC_GRAVITY",
                      },
                    ],
                    "type": "SINGLE_SELECT",
                    "value": "",
                  },
                  {},
                  ,
                  {
                    "align": "center",
                    "label": "@60F and 14.7psia",
                    "name": "DENSITY_MAX",
                    "type": "TEXT",
                  },
                ],
              ],
              "name": "FLUID_PROPERTIES",
              "type": "TABLE_INPUT",
              "value": {
                "density": "SPECIFIC_GRAVITY",
              },
            },
          ],
        },
      ],
    },
  },
]
`;

exports[`schemaBuilder tileThumbnail when Measurement Type is changed to Density, then disable Viscosity option. 1`] = `
[
  {
    "componentProps": {
      "schema": [
        {
          "fields": [
            {
              "column": 12,
              "data": [
                {
                  "description": "Flow Measurement is the process of measuring fluid in your plant or industry. You can measure flow through a variety of different devices such as Coriolis, differential pressure, vortex, magnetic, ultrasonic, turbine and positive displacement meters.",
                  "disabled": false,
                  "id": "FLOW",
                  "imgUrl": "https://emerson-cdn.azurewebsites.net/7bd555544cf68071bafa.png",
                  "title": "Flow",
                },
                {
                  "description": "Our density measurement devices offer reliable performance for applications such as concentration, API, Brix, and more.",
                  "id": "DENSITY",
                  "imgUrl": "https://emerson-cdn.azurewebsites.net/940becae8b116d587fbd.png",
                  "title": "Density",
                },
                {
                  "description": "Our inline viscosity meter offers accurate, repeatable measurement in industries such as refining, chemical, life sciences, and more.",
                  "disabled": true,
                  "id": "VISCOSITY",
                  "imgUrl": "https://emerson-cdn.azurewebsites.net/940becae8b116d587fbd.png",
                  "title": "Viscosity",
                  "tooltip": "There are no products that measure both Flow and Viscosity.",
                },
              ],
              "defaultIds": [
                "DENSITY",
              ],
              "name": "measurement-type",
              "type": "TILE_THUMBNAIL",
              "value": [
                "DENSITY",
              ],
            },
          ],
        },
      ],
    },
  },
]
`;

exports[`schemaBuilder tileThumbnail when Measurement Type is changed, then update Process Piping field text. 1`] = `
[
  {
    "componentProps": {
      "schema": [
        {
          "fields": [
            {
              "column": 12,
              "data": [
                {
                  "description": "Flow Measurement is the process of measuring fluid in your plant or industry. You can measure flow through a variety of different devices such as Coriolis, differential pressure, vortex, magnetic, ultrasonic, turbine and positive displacement meters.",
                  "id": "FLOW",
                  "imgUrl": "https://emerson-cdn.azurewebsites.net/7bd555544cf68071bafa.png",
                  "title": "Flow",
                },
              ],
              "defaultIds": [
                "FLOW",
              ],
              "name": "measurement-type",
              "type": "TILE_THUMBNAIL",
              "value": [
                "FLOW",
              ],
            },
            {
              "column": 12,
              "name": "process-piping",
              "text": "Process Piping - UPDATED",
              "type": "LABEL_TEXT",
            },
          ],
        },
      ],
    },
  },
]
`;
